# Document_Intelligence

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py
data_preparation/evaluation_set/: ground_truth.json
data_preparation/prompt_tuning/: evaluate_prompts.py  evaluation_report.md
monitoring/: grafana_dashboards.json  grafana_dashboards_provision.yml  loki_config.yml  prometheus.yml  promtail_config.yml
serving/gateway/app/: config.py  database.py  main.py  schemas.py
serving/pipelines/vlm/: pipeline.py  prompts.py  vlm_client.py
