[project]
name = "docunder"
version = "0.1.0"
description = "Document Intelligence system for Invoice extraction and Revenue Statistics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "openai>=1.12.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "pillow>=10.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["serving", "dashboard"]

